
name:                ethereum-util
version:             0.1.0.0
license-file:        LICENSE
author:              jamshid
maintainer:          j
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Blockchain.Colors
                     , Blockchain.ExtWord
                     , Blockchain.Format
                     , Blockchain.SHA
                     , Blockchain.Util
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , bytestring
                     , cryptohash
                     , ethereum-rlp
                     , haskoin
                     , ansi-wl-pprint
                     , nibblestring
  hs-source-dirs:      src
  default-language:    Haskell2010